# trafix

./: .release-please-manifest.json  Cargo.toml  README.md  release-please-config.json
.github/workflows/: rust-ci.yml
trafix/: Cargo.toml
trafix-codec/: CHANGELOG.md  Cargo.toml
trafix-codec/src/: digest.rs  lib.rs
trafix-codec/src/constants/: mod.rs
trafix-codec/src/decoder/: decode.rs  mod.rs  num.rs
trafix-codec/src/encoder/: mod.rs
trafix-codec/src/message/: message.rs  mod.rs
trafix-codec/src/message/field/: field.rs  mod.rs
trafix-codec/src/message/field/value/: aliases.rs  begin_string.rs  mod.rs  msg_type.rs
trafix-engine/: Cargo.toml
