[workspace]
members = [
    "trafix", "trafix-codec",
    "trafix-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kasim Fejzić <kasimfejzo@gmail.com>", "Nadir Fejzić <nadirfejzo@gmail.com>"]
description = "FIX (Financial Information eXchange) codec and engine libraries written in Rust."
repository = "https://github.com/oxifix/trafix"
homepage = "https://github.com/oxifix/trafix"
license = "Apache-2.0"

[workspace.dependencies]
bytes = "1.10.1"
insta = "1.43.2"
thiserror = "2.0.17"
