[package]
name = "trafix-codec"
version = "0.1.1"
description = "Low-level library for high-performance parsing, encoding, and validation of FIX messages."
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
insta.workspace = true
thiserror.workspace = true
